--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "movie"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -15,8 +17,12 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "heroku": "^7.63.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "nodemon": "^2.0.19"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
