--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.3",
     "heroku": "^7.63.0",
     "jsonwebtoken": "^8.5.1",
+    "memorystore": "^1.6.7",
     "mongoose": "^6.6.0",
     "nodemon": "^2.0.19"
   },
